portico: Fix spacing for logged-in dropdown in nav bar.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -770,6 +770,7 @@ input.text-error {
 .portico-header .dropdown-pill {
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    margin-left: 10px;
     font-weight: 400;
     cursor: pointer;
 }
